<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.alexis.done.view.activities.AddTaskActivity">

    <View
        android:id="@+id/line1_title_addTask"
        android:layout_height="1dp"
        android:background="#90909090"
        android:layout_width="wrap_content"/>

    <TextView
        android:id="@+id/title_addTask"
        android:text="@string/title_view_add_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>

    <View
        android:id="@+id/line2_title_addTask"
        android:layout_height="1dp"
        android:background="#90909090"
        android:layout_width="wrap_content"
        android:layout_below="@+id/title_addTask"
        android:layout_marginTop="3dp"/>

    <RelativeLayout
        android:id="@+id/layout_name_addTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line2_title_addTask"
        android:layout_marginTop="15dp"
        android:background="@drawable/rounded_corner">

        <TextView
            android:id="@+id/name_addTask"
            android:text="@string/name_view_add_task"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <View
            android:id="@+id/line_name_addTask"
            android:layout_height="1dp"
            android:background="#909090"
            android:layout_width="wrap_content"
            android:layout_below="@+id/name_addTask"/>

        <EditText
            android:id="@+id/input_name_addTask"
            android:hint="@string/hint_input_name_addTask"
            android:background="@drawable/edit_text_design"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/line_name_addTask"
            android:gravity="center"
            android:singleLine="true"
            android:layout_marginTop="5dp"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_type_addTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_name_addTask"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_corner">

        <TextView
            android:id="@+id/type_addTask"
            android:text="@string/type_view_add_task"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <View
            android:id="@+id/line_type_addTask"
            android:layout_height="1dp"
            android:background="#909090"
            android:layout_width="wrap_content"
            android:layout_below="@+id/type_addTask"/>

        <Spinner
            android:id="@+id/list_type_addTask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/line_type_addTask"
            android:entries="@array/list_tasks_type"
            android:layout_marginTop="5dp"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_date_addTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_type_addTask"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_corner">

        <TextView
            android:id="@+id/date_addTask"
            android:text="@string/date_view_add_task"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <View
            android:id="@+id/line_date_addTask"
            android:layout_height="1dp"
            android:background="#909090"
            android:layout_width="wrap_content"
            android:layout_below="@+id/date_addTask"/>

        <TimePicker
            android:id="@+id/input_time_addTask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/date_addTask"/>

    </RelativeLayout>

</RelativeLayout>